@@ -1,3 +1,5 @@
+HEAD
+	+ Switching antivirus from clamavscan to clamdscan
 1.3.12
 	+ Bug fix: Added migration to rename access table to squid_access.
 	+ Add breadcrumbs
